# OiOi-Track

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .worktreeinclude  Dockerfile  Procfile  README.md  docker-compose.postgres.yml  docker-compose.yml  entrypoint.sh  nginx.conf  package.json  pyproject.toml  pytest.ini  requirements.txt  run_dev.bat  run_dev.sh  supervisord.conf  zensical.toml
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: app-tests.yml  build-docs.yml  codeql.yml  docker-image-api.yml  docker-image.yml  dry-image-cleanup.yml  image-cleanup.yml  stale.yml
docs/: development.md  env-variables.md
src/app/: config.py  forms.py  helpers.py  history_processor.py  home.py  middleware.py  models.py  signals.py  statistics.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_initial.py  0003_remove_item_provider.py  0022_item_source_squashed_0037_alter_item_media_type.py  0038_comic_historicalcomic_and_more.py  0039_anime_progress_changed_basicmedia_progress_changed_and_more.py  0040_remove_item_app_item_source_valid_alter_item_source_and_more.py  0041_alter_anime_end_date_alter_anime_start_date_and_more.py  0042_enable_import_tasks.py  0043_remove_historicalanime_progress_changed_and_more.py  0044_fix_episode_images.py  0045_alter_episode_options_and_more.py  0046_alter_anime_options_alter_basicmedia_options_and_more.py  0047_alter_anime_options_alter_basicmedia_options_and_more.py  0048_update_repeating_status.py  0049_rename_progress_changed_anime_progressed_at_and_more.py  0050_fix_null_history_users.py  0051_migrate_simkl_periodoc_tasks.py  0052_alter_item_title.py  0053_add_boardgame.py  0054_fix_movie_progress.py  (+10 more)
src/config/: celery.py  gunicorn.py  settings.py  urls.py  views.py  wsgi.py
src/events/: admin.py  models.py  notifications.py  views.py
src/integrations/: tasks.py  urls.py  views.py
src/lists/: admin.py  urls.py  views.py
src/templates/: 400.html  403.html  403_csrf.html  404.html  500.html  base.html
src/users/: admin.py  forms.py  helpers.py  middleware.py  models.py  views.py
(+251 files in other folders)
